syntax = "proto3";

option csharp_namespace = "CarRental.Application.Dtos.Grpc";

import "google/protobuf/timestamp.proto";

package carrental;

service RentalStreaming {
  rpc StreamRentals (stream RentalRequestMessage) returns (stream RentalResponseMessage);
}

message RentalRequestMessage {
  int32 customer_id       = 1;
  int32 car_id            = 2;
  google.protobuf.Timestamp pickup_date_time = 3;
  int32 hours             = 4;
}

message RentalResponseMessage {
  bool success            = 1;
  string message          = 2;
  int64 rental_id         = 3;
  string error_code       = 4;
}